--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Cloud Workspace | By DASC©</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cloud Workspace</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- 👇 This is where your React app mounts -->
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+
+  <!-- 👇 This script must be the COMPILED JS, not .tsx -->
+  <script type="module" src="main.js"></script>
 </body>
 </html>
