--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Cloud Workspace | By DASC©</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cloud Workspace</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- 👇 This is where your React app mounts -->
+  <!-- Mount point for the React app -->
   <div id="root"></div>
 
-  <!-- 👇 This script must be the COMPILED JS, not .tsx -->
+  <!-- Compiled JS bundle -->
   <script type="module" src="main.js"></script>
 </body>
 </html>
